--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
             <section class="container">
                 <h2 class="title" id="work">Work</h2>
                 <div class="content">
-                    <img src="./asset/image/placeholder.png" alt="Highlighted Project" class="highlighted-project"/>
-                    <img src="./asset/image/placeholder.png" alt="Other Projects" class="other-projects"/>
-                    <img src="./asset/image/placeholder.png" alt="Other Projects" class="other-projects"/>
+                    <div class="project large">
+                        <img src="./asset/image/placeholder.png" alt="Highlighted Project" class="large"/>
+                        <div class="text-box">
+                            <div class="project-title">Project Title</div>
+                            <div class="project-subtitle">Project Subtitle</div>
+                        </div>
+                    </div>
+                    <div class="project small">
+                        <div class="project small">
+                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <div class="text-box">
+                                <div class="project-title">Project Title</div>
+                                <div class="project-subtitle">Project Subtitle</div>
+                            </div>
+                        </div>
+                        <div class="project small">
+                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <div class="text-box">
+                                <div class="project-title">Project Title</div>
+                                <div class="project-subtitle">Project Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
