--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section class="container">
                 <h2 class="title" id="about-me">About Me</h2>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a massa efficitur, interdum nunc a, luctus enim. Ut at risus ac magna facilisis tincidunt a et magna. In sed ligula risus. Donec non elit non lectus imperdiet venenatis a nec est. Donec tincidunt erat in purus lobortis, non elementum elit tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Aliquam pulvinar bibendum arcu quis efficitur. Integer placerat felis ac dolor accumsan, sed ullamcorper ligula porta. Nulla laoreet elit nunc, vel finibus justo rutrum et. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam gravida, augue non cursus congue, justo leo euismod ligula, quis sodales risus metus at eros. Aenean a bibendum augue, ut vehicula risus. Mauris non sapien nunc. In bibendum metus ornare, ultrices tortor nec, gravida lorem. Phasellus id turpis ut libero semper sodales. Aliquam maximus consequat convallis. Nunc viverra, dui quis imperdiet tristique, enim est pulvinar tellus, eget accumsan leo felis a erat. Aliquam vel magna magna. Proin vitae tempus velit. Donec eleifend nibh quis lectus scelerisque, et auctor est condimentum. Nam ut quam tempus, dapibus odio non, vestibulum eros. Praesent nec feugiat libero. Quisque maximus nisi id nisl interdum, ut elementum augue convallis.</p>
+                    <p>Hi, my name is Sally.</p>
                 </div>
             </section>
 
@@ -43,7 +43,25 @@
                             <div class="project-subtitle">Project Subtitle</div>
                         </div>
                     </div>
-                    <div class="project small">
+                    
+                    <div class="project">
+                        <div class="project small">
+                        <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/code-snippet.png" alt="Regular Project" class="small"/></a>
+                            <div class="text-box">
+                                <div class="project-title">CSS Code Snippet</div>
+                                <div class="project-subtitle">Some important notes</div>
+                            </div>
+                        </div>
+                        <div class="project small">
+                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <div class="text-box">
+                                <div class="project-title">Project Title</div>
+                                <div class="project-subtitle">Project Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="project">
                         <div class="project small">
                         <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
                             <div class="text-box">
@@ -59,6 +77,24 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="project">
+                        <div class="project small">
+                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <div class="text-box">
+                                <div class="project-title">Project Title</div>
+                                <div class="project-subtitle">Project Subtitle</div>
+                            </div>
+                        </div>
+                        <div class="project small">
+                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <div class="text-box">
+                                <div class="project-title">Project Title</div>
+                                <div class="project-subtitle">Project Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
