fit the content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yixuan Sally Zhang's Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="asset/image/favicon.png">
         <link rel="stylesheet" href="./asset/css/reset.css" />
         <link rel="stylesheet" href="./asset/css/stylesheet.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Lora|Abel" rel="stylesheet" />
@@ -37,31 +38,31 @@
                 <h2 class="title" id="work">Work</h2>
                 <div class="content">
                     <div class="project large">
-                        <img src="./asset/image/placeholder.png" alt="Highlighted Project" class="large"/>
+                        <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="large"/></a>
                         <div class="text-box">
-                            <div class="project-title">Project Title</div>
-                            <div class="project-subtitle">Project Subtitle</div>
+                            <div class="project-title">CSS Code Snippet</div>
+                            <div class="project-subtitle">Some important notes</div>
                         </div>
                     </div>
                     
-                    <div class="project">
+                    <div class="project medium">
                         <div class="project small">
-                        <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/code-snippet.png" alt="Regular Project" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">CSS Code Snippet</div>
                                 <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                         <div class="project small">
-                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Project Title</div>
-                                <div class="project-subtitle">Project Subtitle</div>
+                                <div class="project-title">CSS Code Snippet</div>
+                                <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                     </div>
                     
-                    <div class="project">
+                    <!-- <div class="project medium">
                         <div class="project small">
                         <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
                             <div class="text-box">
@@ -78,7 +79,7 @@
                         </div>
                     </div>
 
-                    <div class="project">
+                    <div class="project medium">
                         <div class="project small">
                         <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
                             <div class="text-box">
@@ -93,7 +94,7 @@
                                 <div class="project-subtitle">Project Subtitle</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
