update mobile version

--- a/index.html
+++ b/index.html
@@ -49,52 +49,52 @@
                         <div class="project small">
                             <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">CSS Code Snippet</div>
+                                <div class="project-title">Small 1</div>
                                 <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                         <div class="project small">
                             <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">CSS Code Snippet</div>
+                                <div class="project-title">Small 2</div>
                                 <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                     </div>
                     
-                    <!-- <div class="project medium">
+                    <div class="project medium">
                         <div class="project small">
-                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Project Title</div>
-                                <div class="project-subtitle">Project Subtitle</div>
+                                <div class="project-title">Small 3</div>
+                                <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                         <div class="project small">
-                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Project Title</div>
-                                <div class="project-subtitle">Project Subtitle</div>
+                                <div class="project-title">Small 4</div>
+                                <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                     </div>
 
                     <div class="project medium">
                         <div class="project small">
-                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Project Title</div>
-                                <div class="project-subtitle">Project Subtitle</div>
+                                <div class="project-title">Small 5</div>
+                                <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
                         <div class="project small">
-                        <img src="./asset/image/placeholder.png" alt="Regular Project" class="small"/>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Project Title</div>
-                                <div class="project-subtitle">Project Subtitle</div>
+                                <div class="project-title">Small 6</div>
+                                <div class="project-subtitle">Some important notes</div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>                    
 
                 </div>
             </section>
