update readme file, fix redirection and avatar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <section class="container">
                 <h2 class="title" id="about-me">About Me</h2>
                 <div class="content">
+                    <img class="avatar" src="./asset/image/avatar.png" />
                     <p>Hi, my name is Sally.</p>
                 </div>
             </section>
@@ -101,7 +102,7 @@
 
             <section class="container">
                 <h2 class="title" id="contact-me">Contact Me</h2>
-                <div class="content">
+                <div class="content card">
                     <div class="contact-card"> 
                         <a href="tel:240-509-0914">240.509.0914</a>
                     </div>
