--- a/index.html
+++ b/index.html
@@ -39,60 +39,60 @@
                 <h2 class="title" id="work">Work</h2>
                 <div class="content">
                     <div class="project large">
-                        <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="large"/></a>
+                        <a href="https://anthonypacella.github.io/MovieHunter/" target="_blank"><img src="./asset/image/placeholder.png" alt="Movie Hunter" class="large"/></a>
                         <div class="text-box">
-                            <div class="project-title">CSS Code Snippet</div>
-                            <div class="project-subtitle">Some important notes</div>
+                            <div class="project-title">Movie Hunter</div>
+                            <div class="project-subtitle">IMDB and MovieDB API employed search engine based on movie title and popular searches</div>
                         </div>
                     </div>
                     
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/JavascriptCodeQuiz/" target="_blank"><img src="./asset/image/placeholder.png" alt="Javascript Code Quiz" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 1</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">Javascript Code Quiz</div>
+                                <div class="project-subtitle">Timed quiz to test user's coding skills</div>
                             </div>
                         </div>
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/WeatherDashboard/" target="_blank"><img src="./asset/image/placeholder.png" alt="Weather Dashboard" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 2</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">Weather Dashboard</div>
+                                <div class="project-subtitle">OpenWeather API employed for weather and forecast information</div>
                             </div>
                         </div>
                     </div>
                     
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/RandomPasswordGenerator/" target="_blank"><img src="./asset/image/placeholder.png" alt="Random Password Generator" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 3</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">Random Password Generator</div>
+                                <div class="project-subtitle">Generate password based on user preferences</div>
                             </div>
                         </div>
                         <div class="project small">
                             <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 4</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">CSS Code Snippet</div>
+                                <div class="project-subtitle">Flash card for importance CSS code</div>
                             </div>
                         </div>
                     </div>
 
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/LibraryofCongressSearchEngine/" target="_blank"><img src="./asset/image/placeholder.png" alt="Library of Congress Search Engine" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 5</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">Library of Congress Search Engine</div>
+                                <div class="project-subtitle">Library of Congress API employed based on keywords and format</div>
                             </div>
                         </div>
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/CheckMyFriend/" target="_blank"><img src="./asset/image/placeholder.png" alt="Check My Friend" class="small"/></a>
                             <div class="text-box">
-                                <div class="project-title">Small 6</div>
-                                <div class="project-subtitle">Some important notes</div>
+                                <div class="project-title">Check My Friend</div>
+                                <div class="project-subtitle">League of Legends account status checker</div>
                             </div>
                         </div>
                     </div>                    
