update image, repo and deployed page

--- a/index.html
+++ b/index.html
@@ -39,60 +39,88 @@
                 <h2 class="title" id="work">Work</h2>
                 <div class="content">
                     <div class="project large">
-                        <a href="https://anthonypacella.github.io/MovieHunter/" target="_blank"><img src="./asset/image/placeholder.png" alt="Movie Hunter" class="large"/></a>
+                        <a href="https://anthonypacella.github.io/MovieHunter/" target="_blank"><img src="./asset/image/movieHunter.PNG" alt="Movie Hunter" class="large"/></a>
                         <div class="text-box">
                             <div class="project-title">Movie Hunter</div>
                             <div class="project-subtitle">IMDB and MovieDB API employed search engine based on movie title and popular searches</div>
+                            <div class="project-subtitle">
+                                <span><a href="https://github.com/anthonypacella/MovieHunter" target="_blank">Github Repository · </a></span>
+                                <span><a href="https://anthonypacella.github.io/MovieHunter/" target="_blank">Deployed Page</a></span>
+                            </div>
                         </div>
                     </div>
                     
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/JavascriptCodeQuiz/" target="_blank"><img src="./asset/image/placeholder.png" alt="Javascript Code Quiz" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/JavascriptCodeQuiz/" target="_blank"><img src="./asset/image/javascriptCodeQuiz.PNG" alt="Javascript Code Quiz" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">Javascript Code Quiz</div>
                                 <div class="project-subtitle">Timed quiz to test user's coding skills</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/JavascriptCodeQuiz" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/JavascriptCodeQuiz/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/WeatherDashboard/" target="_blank"><img src="./asset/image/placeholder.png" alt="Weather Dashboard" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/WeatherDashboard/" target="_blank"><img src="./asset/image/weatherDashboard.PNG" alt="Weather Dashboard" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">Weather Dashboard</div>
                                 <div class="project-subtitle">OpenWeather API employed for weather and forecast information</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/WeatherDashboard" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/WeatherDashboard/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/RandomPasswordGenerator/" target="_blank"><img src="./asset/image/placeholder.png" alt="Random Password Generator" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/RandomPasswordGenerator/" target="_blank"><img src="./asset/image/passwordGenerator.PNG" alt="Random Password Generator" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">Random Password Generator</div>
                                 <div class="project-subtitle">Generate password based on user preferences</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/RandomPasswordGenerator" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/RandomPasswordGenerator/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/placeholder.png" alt="CSS Code Snippet" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank"><img src="./asset/image/cssCodeSnippet.PNG" alt="CSS Code Snippet" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">CSS Code Snippet</div>
                                 <div class="project-subtitle">Flash card for importance CSS code</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/CSSCodeSnippet" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/CSSCodeSnippet/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="project medium">
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/LibraryofCongressSearchEngine/" target="_blank"><img src="./asset/image/placeholder.png" alt="Library of Congress Search Engine" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/LibraryofCongressSearchEngine/" target="_blank"><img src="./asset/image/libraryOfCongressSearchEngine.PNG" alt="Library of Congress Search Engine" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">Library of Congress Search Engine</div>
                                 <div class="project-subtitle">Library of Congress API employed based on keywords and format</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/LibraryofCongressSearchEngine" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/LibraryofCongressSearchEngine/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                         <div class="project small">
-                            <a href="https://banbanleelee.github.io/CheckMyFriend/" target="_blank"><img src="./asset/image/placeholder.png" alt="Check My Friend" class="small"/></a>
+                            <a href="https://banbanleelee.github.io/CheckMyFriend/" target="_blank"><img src="./asset/image/checkMyFriend.PNG" alt="Check My Friend" class="small"/></a>
                             <div class="text-box">
                                 <div class="project-title">Check My Friend</div>
                                 <div class="project-subtitle">League of Legends account status checker</div>
+                                <div class="project-subtitle">
+                                    <span><a href="https://github.com/banbanleelee/CheckMyFriend" target="_blank">Github Repository · </a></span>
+                                    <span><a href="https://banbanleelee.github.io/CheckMyFriend/" target="_blank">Deployed Page</a></span>
+                                </div>
                             </div>
                         </div>
                     </div>                    
@@ -104,16 +132,19 @@
                 <h2 class="title" id="contact-me">Contact Me</h2>
                 <div class="content card">
                     <div class="contact-card"> 
-                        <a href="tel:240-509-0914">240.509.0914</a>
+                        <a href="tel:240-509-0914">Mobile</a>
                     </div>
                      <div class="contact-card">
-                        <a href="mailto:sallyhoney96@gmail.com">sallyhoney96@gmail.com</a>
+                        <a href="mailto:sallyyixuanzhang@gmail.com">Email</a>
                      </div>
                     <div class="contact-card">
                         <a href="https://github.com/banbanleelee">GitHub</a>
                     </div>
                     <div class="contact-card">
                         <a href="https://www.linkedin.com/in/sally-zhang-11b743b5/">LinkedIn</a>
+                    </div> 
+                    <div class="contact-card">
+                        <a href="./asset/attachment/Yixuan Sally Zhang's Resume.pdf" download>Resume</a>
                     </div> 
                 </div>
             </section>
